packages/typ/tests/fixtures/diagnostics/0650_functor_abstract_value_as_int_10.ml.expected
File "0650_functor_abstract_value_as_int_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0650_functor_abstract_value_as_int_10 is not a valid module name.

File "0650_functor_abstract_value_as_int_10.ml", line 7, characters 16-19:
7 |   let y : int = X.x
                    ^^^
Error: The value X.x has type X.t but an expression was expected of type int
